--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             GenCyber @ Mississippi State University
         </div>
 
-        <li><a href="https://www.msstate.edu/events">Register</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBGPb8jL8NKE-N8VKWHk0nPMXymuizLlk6rsCnzNNj1H2B6w/viewform?usp=sf_link">Register</a></li>
 
         <li><a href="https://youtu.be/xQVL0Cd11kk">Informational Video</a></li>
 
