--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBGPb8jL8NKE-N8VKWHk0nPMXymuizLlk6rsCnzNNj1H2B6w/viewform?usp=sf_link">Register</a></li>
 
         <li><a href="https://youtu.be/xQVL0Cd11kk">Informational Video</a></li>
+        
+        <li><a href="https://youtu.be/LExqowC4Qqk">Promotional Video</a></li>
 
     </div>
 </body>
